--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,12 @@ body {
   height: 40px;
   text-indent: 25px;
   border-radius: 20px;
+  width: 100%;
+  position: relative; 
+  background-image: url('./imges/Capture.JPG');
+  background-repeat: no-repeat;
+  background-size: 20px; 
+  background-position: 10px center; 
 }
 
 .search input:focus {
